--- a/index.html
+++ b/index.html
@@ -1,55 +1,77 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="utf-8">
-		<title>utareyu.github.io</title>
-		<link rel="icon" href="utareyu.ico">
-		<link rel="stylesheet" href="css/styles.css">
-	</head>
-	<body>
-		<header>
-			<img src="img\utareyu.jpg" width="120" height="120" class="icon">
-			<div class="info">
-				<h1>utareyu</h1>
-				<p>意外と気分屋</p>
-				<div class="vat">
-					using:
-					<a href="https://github.com/utareyu"><img src="img/GitHub.svg" width="20px" alt="GitHub"></a>
-					<a href="https://twitter.com/utareyu"><img src="img/Twitter.svg" width="20px" alt="Twitter"></a>
-				</div>
-			</div>
-		</header>
+    <head>
+        <meta charset="utf-8">
+        <title>utareyu.github.io</title>
+        <link rel="icon" href="utareyu.ico">
+        <link rel="stylesheet" href="css/styles.css">
 
-		<div class="items">
-			<div>
-				<section>
-					<h2>Apps</h2>
-					<ul>
-						<li><a>kfpedia</a></li>
-						<li><a>Sky</a></li>
-					</ul>
-				</section>
+    </head>
+    <body>
+        <header>
+            <div class="header">
+                <div class="icon">
+                    <img src="img\utareyu.jpg" width="120" height="120">
+                </div>
+                <div class=info>
+                    <h1>utareyu</h1>
+                    <p>意外と気分屋</p>
+                    <ul>
+                        using:<li><img src="img\GitHub.png" width="20" height="20"></li>
+                        <li><img src="img\Twitter.png" width="20" height="20"></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
 
-				<section>
-					<h2>Repository</h2>
-					<ul>
-						<li><a href="https://github.com/utareyu/kfpedia">kfpedia</a></li>
-						<li><a href="https://github.com/utareyu/sky">Sky</a></li>
-					</ul>
-				</section>
+        <div class="items">
+            <section>
+                <h2>
+                    Apps
+                </h2>
+                <ul>
+                    <li>
+                        <!-- <a href="">kfpedia</a> -->
+                        kfpedia
+                    </li>
+                    <li>
+                        <!-- <a href="">Sky</a> -->
+                        Sky
+                    </li>
+                </ul>
+            </section>
+    
+            <section>
+                <h2>
+                    Repository
+                </h2>
+                <ul>
+                    <li>
+                        <a href="https://github.com/utareyu/kfpedia">kfpedia</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/utareyu/Sky">Sky</a>
+                    </li>
+                </ul>
+            </section>
+    
+            <section>
+                <h2>
+                    Contact
+                </h2>
+                <ul>
+                    <li>
+                        <a href="https://github.com/utareyu">Github(utareyu)</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/utareyu">Twitter(@utareyu)</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
-				<section>
-					<h2>Contact</h2>
-					<ul>
-						<li><a href="https://github.com/utareyu">Github(utareyu)</a></li>
-						<li><a href="https://twitter.com/utareyu">Twitter(@utareyu)</a></li>
-					</ul>
-				</section>
-			</div>
-		</div>
-
-		<footer>
-			(c)2020~ utareyu
-		</footer>
-	</body>
+        <footer>
+            <div class="footer"><p>(c)2020~ utareyu</p></div>
+        </footer>
+    </body>
 </html>
