--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>utareyu.github.io</title>
-        <link rel="icon" href="utareyu.ico">
-        <link rel="stylesheet" href="css/styles.css">
-
-    </head>
-    <body>
-        <header>
-            <div class="header">
-                <div class="icon">
-                    <img src="img\utareyu.jpg" width="120" height="120">
-                </div>
-                <div class=info>
-                    <h1>utareyu</h1>
-                    <p>意外と気分屋</p>
-                    <ul>
-                        using:<li><img src="img\GitHub.png" width="20" height="20"></li>
-                        <li><img src="img\Twitter.png" width="20" height="20"></li>
-                    </ul>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <title>utareyu.github.io</title>
+    <link rel="icon" href="utareyu.ico">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <img src="img\utareyu.jpg" width="120" height="120">
+            <div class=info>
+                <h1>utareyu</h1>
+                <p>意外と気分屋</p>
+                <ul>
+                    using:
+                    <li><img src="img\GitHub.png" width="20" height="20"></li>
+                    <li><img src="img\Twitter.png" width="20" height="20"></li>
+                </ul>
             </div>
-        </header>
-
-        <div class="items">
+        </div>
+    </header>
+    <main>
+        <section class="items">
             <section>
                 <h2>
                     Apps
@@ -40,7 +38,6 @@
                     </li>
                 </ul>
             </section>
-    
             <section>
                 <h2>
                     Repository
@@ -54,24 +51,23 @@
                     </li>
                 </ul>
             </section>
-    
-            <section>
-                <h2>
-                    Contact
-                </h2>
-                <ul>
-                    <li>
-                        <a href="https://github.com/utareyu">Github(utareyu)</a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/utareyu">Twitter(@utareyu)</a>
-                    </li>
-                </ul>
-            </section>
-        </div>
-
-        <footer>
-            <div class="footer"><p>(c)2020~ utareyu</p></div>
-        </footer>
-    </body>
+        </section>
+        <section>
+            <h2>
+                Contact
+            </h2>
+            <ul>
+                <li>
+                    <a href="https://github.com/utareyu">Github(utareyu)</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/utareyu">Twitter(@utareyu)</a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <div class="footer"><p>(c)2020~ utareyu</p></div>
+    </footer>
+</body>
 </html>
