--- a/index.html
+++ b/index.html
@@ -1,73 +1,60 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="jp">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link href="img/utareyu.ico" rel="icon">
     <title>utareyu.github.io</title>
-    <link rel="icon" href="utareyu.ico">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <img src="img\utareyu.jpg" width="120" height="120">
-            <div class=info>
-                <h1>utareyu</h1>
-                <p>意外と気分屋</p>
-                <ul>
-                    using:
-                    <li><img src="img\GitHub.png" width="20" height="20"></li>
-                    <li><img src="img\Twitter.png" width="20" height="20"></li>
-                </ul>
+        <div id="container">
+            <img src="img/utareyu.jpg" alt="utareyu">
+            <div id="column">
+                <h1>
+                    utareyu
+                </h1>
+                <p>
+                    意外と気分屋
+                </p>
             </div>
         </div>
     </header>
     <main>
-        <section class="items">
+        <section id="contents">
             <section>
-                <h2>
+                <h3>
                     Apps
-                </h2>
+                </h3>
                 <ul>
-                    <li>
-                        <!-- <a href="">kfpedia</a> -->
-                        kfpedia
-                    </li>
-                    <li>
-                        <!-- <a href="">Sky</a> -->
-                        Sky
-                    </li>
+                    <li>kfpedia</li>
+                    <li>sky</li>
                 </ul>
             </section>
             <section>
-                <h2>
+                <h3>
                     Repository
-                </h2>
+                </h3>
                 <ul>
-                    <li>
-                        <a href="https://github.com/utareyu/kfpedia">kfpedia</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/utareyu/Sky">Sky</a>
-                    </li>
+                    <li><a href="https://github.com/utareyu/kfpedia">kfpedia</a></li>
+                    <li><a href="https://github.com/utareyu/sky">sky</a></li>
                 </ul>
             </section>
         </section>
-        <section>
-            <h2>
-                Contact
-            </h2>
+        <section id="contact">
+            <h3>
+                contact
+            </h3>
             <ul>
-                <li>
-                    <a href="https://github.com/utareyu">Github(utareyu)</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/utareyu">Twitter(@utareyu)</a>
-                </li>
+                <li><a id="mytwitter" href="https://twitter.com/utareyu">twitter(@utareyu)</a></li>
+                <li><a id="mygithub" href="https://github.com/utareyu">github(utareyu)</a></li>
             </ul>
         </section>
     </main>
     <footer>
-        <div class="footer"><p>(c)2020~ utareyu</p></div>
+        <p>(c)2021~ utareyu</p>
     </footer>
 </body>
 </html>
