--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         <section id="contact">
             <h3>
-                contact
+                Contact
             </h3>
             <ul>
                 <li><a id="mytwitter" href="https://twitter.com/utareyu">twitter(@utareyu)</a></li>
