--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
     <main>
         <section id="contents">
             <h1>404 Page not found</h1>
-            <h2>お探しのページは見つからないか削除されているか虚無です。</h2>
-            <h2><a href="https://utareyu.github.io/">Home</a></h2>
+            <p>お探しのページは見つからないか削除されているか虚無です。</p>
+            <p><a href="https://utareyu.github.io/">Home</a></p>
         </section>
     </main>
     <footer>
