--- a/404.html
+++ b/404.html
@@ -9,9 +9,11 @@
     <title>page not found</title>
 </head>
 <body>
+    <header>
+        <h1>404 Page not found</h1>
+    </header>
     <main>
         <section id="contents">
-            <h1>404 Page not found</h1>
             <p>お探しのページは見つからないか削除されているか虚無です。</p>
             <p><a href="https://utareyu.github.io/">Home</a></p>
         </section>
