--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div id="container">
+        <div class="container">
             <img src="img/utareyu.jpg" alt="utareyu">
             <div id="column">
                 <h1>
