--- a/404.html
+++ b/404.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="jp">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main_pc.css" rel="stylesheet">
     <link href="css/top.css" rel="stylesheet">
     <link href="img/utareyu.ico" rel="icon">
     <title>page not found</title>
 </head>
+
 <body>
     <header>
-        <h1>404 Page not found</h1>
+        <div class="container">
+            <h1>404 Page not found</h1>
+        </div>
     </header>
     <main>
-        <section id="contents">
+        <section id="contents" class="main">
             <p>お探しのページは見つからないか削除されているか虚無です。</p>
-            <p><a href="https://utareyu.github.io/">Home</a></p>
+            <p>The page you’re looking for can’t be found :/</p>
+            <p><a href="index.html">Home</a></p>
         </section>
     </main>
     <footer>
         <p>(c)2021~ utareyu</p>
     </footer>
 </body>
+
 </html>
