--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     utareyu
                 </h1>
                 <p>
-                    意外と気分屋
+                    VRたのしいマン
                 </p>
             </div>
         </div>
