--- a/index.html
+++ b/index.html
@@ -60,6 +60,26 @@
                         <li><a id="mytwitter" href="https://twitter.com/utareyu">twitter(@utareyu)</a></li>
                         <li><a id="mygithub" href="https://github.com/utareyu">github(utareyu)</a></li>
                     </ul>
+                    <label for="trigger" class="open_btn">See more...</label>
+                    <div class="popup_wrap">
+                        <input id="trigger" type="checkbox">
+                        <div class="popup_overlay">
+                            <label for="trigger" class="popup_trigger"></label>
+                            <div class="popup_content">
+                                <label for="trigger" class="close_btn">×</label>
+                                <dl>
+                                    <dt>VRChat</dt>
+                                    <dd><a href="https://vrchat.com/home/user/usr_9bace768-7b30-49aa-8ecc-0e02bc048f97">うた（utareyu）</a></dd>
+                                    <dt>D4DJGM</dt>
+                                    <dd>うた(nmfG4tEA)</dd>
+                                    <dt>Vroid</dt>
+                                    <dd><a href="https://hub.vroid.com/users/16267066">utareyu</a></dd>
+                                    <dt>BangDreamGBP</dt>
+                                    <dd>うた(96494588)</dd>
+                                    <p>(上から出没率順)</p>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </aside>
             <nav>
@@ -80,8 +100,7 @@
         </div>
         <aside>
             <div class="tweet">
-                <a class="twitter-timeline" data-width="450" data-height="500" data-dnt="true" data-theme="dark"
-                    href="https://twitter.com/utareyu?ref_src=twsrc%5Etfw">Tweets by utareyu</a>
+                <a class="twitter-timeline" data-width="450" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/utareyu?ref_src=twsrc%5Etfw">Tweets by utareyu</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </aside>
