--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                                     <dd><a href="https://vrchat.com/home/user/usr_9bace768-7b30-49aa-8ecc-0e02bc048f97">うた（utareyu）</a></dd>
                                     <dt>D4DJGM</dt>
                                     <dd>うた(nmfG4tEA)</dd>
+                                    <dt>ウマ娘</dt>
+                                    <dd>994747415</dd>
                                     <dt>Vroid</dt>
                                     <dd><a href="https://hub.vroid.com/users/16267066">utareyu</a></dd>
                                     <dt>BangDreamGBP</dt>
