--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <p>
                     VRたのしいマン
                 </p>
+				<p>Ipadair4使用中</p>
             </div>
         </div>
     </header>
