--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     utareyu
                 </h1>
                 <p>
-                    VRたのしいマン
+                    VRたのしいマン<br>Ipadair4導入
                 </p>
             </div>
         </div>
