--- a/si/selfInt.html
+++ b/si/selfInt.html
@@ -74,7 +74,7 @@
                     </figure>
                     <p>
                         <a href="https://www.oculus.com/?locale=ja_JP">Oculus Quest2</a>はPCがいらないスタンドアローン型のVRヘッドセットで、価格も３万円台と非常に手にしやすい価格です。<br> 私は
-                        <a href="https://www.oculus.com/experiences/quest/2448060205267927/?locale=ja_JP">BEATSABER</a>がやりたくてquest2を買いましたが、 VRChatで初心者向けワールドを巡っていたら親切にも声をかけてくださった方がいて、そこから頻繁にYRChatをプレイするようになりました。
+                        <a href="https://www.oculus.com/experiences/quest/2448060205267927/?locale=ja_JP">BEATSABER</a>がやりたくてquest2を買いましたが、 VRChatで初心者向けワールドを巡っていたら親切にも声をかけてくださった方がいて、そこから頻繁にVRChatをプレイするようになりました。
                         <br> 私は自作のアバターがあるのでそれを導入していますが、もちろんほかの人が作ったアバターもコピーすることができるので、 モデリングがちょっと…という人でも気軽に楽しめます。
                     </p>
                 </div>
