--- a/index.html
+++ b/index.html
@@ -2,116 +2,118 @@
 <html lang="jp">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="address=no,telephone=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/main_pc.css" rel="stylesheet">
-    <link href="css/top.css" rel="stylesheet">
-    <link href="img/utareyu.ico" rel="icon">
-    <title>utareyu.github.io</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="format-detection" content="address=no,telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/main.css" rel="stylesheet">
+	<link href="css/top.css" rel="stylesheet">
+	<link href="img/utareyu.ico" rel="icon">
+	<title>utareyu.github.io</title>
 </head>
 
 <body>
-    <header>
-        <div class="container header">
-            <img src="img/utareyu.jpg" alt="utareyu">
-            <div class="column headcol">
-                <h1>
-                    utareyu
-                </h1>
-                <p>
-                    VRたのしいマン<br>Ipadair4導入
-                </p>
-            </div>
-        </div>
-    </header>
-    <div class="main">
-        <div class="container">
-            <main>
-                <section id="contents">
-                    <section>
-                        <h3>
-                            App
-                        </h3>
-                        <ul>
-                            <li>bf-int-ent</li>
-                            <li>kfpedia</li>
-                            <li>sky</li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h3>
-                            Repository
-                        </h3>
-                        <ul>
-                            <li><a href="https://github.com/utareyu/bf-int-enc">bf-int-ent</a></li>
-                            <li><a href="https://github.com/utareyu/kfpedia">kfpedia</a></li>
-                            <li><a href="https://github.com/utareyu/sky">sky</a></li>
-                        </ul>
-                    </section>
-                </section>
-            </main>
-            <aside>
-                <section id="contact" class="column">
-                    <h3>
-                        Contact
-                    </h3>
-                    <ul>
-                        <li><a id="mytwitter" href="https://twitter.com/utareyu">twitter(@utareyu)</a></li>
-                        <li><a id="mygithub" href="https://github.com/utareyu">github(utareyu)</a></li>
-                    </ul>
-                    <label for="trigger" class="open_btn">See more...</label>
-                    <div class="popup_wrap">
-                        <input id="trigger" type="checkbox">
-                        <div class="popup_overlay">
-                            <label for="trigger" class="popup_trigger"></label>
-                            <div class="popup_content">
-                                <label for="trigger" class="close_btn">×</label>
-                                <dl>
-                                    <dt>VRChat</dt>
-                                    <dd><a href="https://vrchat.com/home/user/usr_9bace768-7b30-49aa-8ecc-0e02bc048f97">うた（utareyu）</a></dd>
-                                    <dt>D4DJGM</dt>
-                                    <dd>うた(nmfG4tEA)</dd>
-                                    <dt>ウマ娘</dt>
-                                    <dd>994747415</dd>
-                                    <dt>Vroid</dt>
-                                    <dd><a href="https://hub.vroid.com/users/16267066">utareyu</a></dd>
-                                    <dt>BangDreamGBP</dt>
-                                    <dd>うた(96494588)</dd>
-                                    <p>(上から出没率順)</p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </aside>
-            <nav>
-                <section class="column">
-                    <h3>
-                        Map
-                    </h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                    </ul>
-                    <h4>Error page</h4>
-                    <ul>
-                        <li><a href="404.html">404</a></li>
-                    </ul>
-                </section>
-            </nav>
-
-        </div>
-        <aside>
-            <div class="tweet">
-                <a class="twitter-timeline" data-width="450" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/utareyu?ref_src=twsrc%5Etfw">Tweets by utareyu</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </aside>
-    </div>
-    <footer>
-        <p>(c)2021~ utareyu</p>
-    </footer>
+	<header>
+		<div class="container header">
+			<img src="img/utareyu.jpg" alt="utareyu">
+			<div class="column headcol">
+				<h1>
+					utareyu
+				</h1>
+				<p>
+					VRたのしいマン<br>Ipadair4導入
+				</p>
+			</div>
+		</div>
+	</header>
+	<div class="main">
+		<div class="container">
+			<main>
+				<section id="contents">
+					<section>
+						<h3>
+							App
+						</h3>
+						<ul>
+							<li>bf-int-ent</li>
+							<li>kfpedia</li>
+							<li>sky</li>
+						</ul>
+					</section>
+					<section>
+						<h3>
+							Repository
+						</h3>
+						<ul>
+							<li><a href="https://github.com/utareyu/bf-int-enc">bf-int-ent</a></li>
+							<li><a href="https://github.com/utareyu/kfpedia">kfpedia</a></li>
+							<li><a href="https://github.com/utareyu/sky">sky</a></li>
+						</ul>
+					</section>
+				</section>
+			</main>
+			<aside>
+				<section id="contact" class="column">
+					<h3>
+						Contact
+					</h3>
+					<ul>
+						<li><a id="mytwitter" href="https://twitter.com/utareyu">twitter(@utareyu)</a></li>
+						<li><a id="mygithub" href="https://github.com/utareyu">github(utareyu)</a></li>
+					</ul>
+					<label for="trigger" class="open_btn">See more...</label>
+					<div class="popup_wrap">
+						<input id="trigger" type="checkbox">
+						<div class="popup_overlay">
+							<label for="trigger" class="popup_trigger"></label>
+							<div class="popup_content">
+								<label for="trigger" class="close_btn">×</label>
+								<dl>
+									<dt>VRChat</dt>
+									<dd><a
+											href="https://vrchat.com/home/user/usr_9bace768-7b30-49aa-8ecc-0e02bc048f97">うた（utareyu）</a>
+									</dd>
+									<dt>D4DJGM</dt>
+									<dd>うた(nmfG4tEA)</dd>
+									<dt>ウマ娘</dt>
+									<dd>994747415</dd>
+									<dt>Vroid</dt>
+									<dd><a href="https://hub.vroid.com/users/16267066">utareyu</a></dd>
+									<dt>BangDreamGBP</dt>
+									<dd>うた(96494588)</dd>
+									<p>(上から出没率順)</p>
+							</div>
+						</div>
+					</div>
+				</section>
+			</aside>
+			<nav>
+				<section class="column">
+					<h3>
+						Map
+					</h3>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+					</ul>
+					<h4>Error page</h4>
+					<ul>
+						<li><a href="404.html">404</a></li>
+					</ul>
+				</section>
+			</nav>
+		</div>
+		<aside>
+			<div class="tweet">
+				<a class="twitter-timeline" data-width="450" data-height="500" data-dnt="true" data-theme="dark"
+					href="https://twitter.com/utareyu?ref_src=twsrc%5Etfw">Tweets by utareyu</a>
+				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</aside>
+	</div>
+	<footer>
+		<p>(c)2021~ utareyu</p>
+	</footer>
 </body>
 
 </html>
