--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
 					</h3>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="https://utareyu.github.io/JavaScript/jstop.html">JavaScript</a></li>
+						<li><a href="https://utareyu.github.io/JavaScript/index.html">JavaScript</a></li>
 					</ul>
-					<h4>Error page</h4>
 					<ul>
 						<li><a href="404.html">404</a></li>
 					</ul>
