--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/main.css" rel="stylesheet">
-	<link href="css/top.css" rel="stylesheet">
+	<link href="https://utareyu.github.io/css/main.css" rel="stylesheet">
+	<link href="https://utareyu.github.io/css/top.css" rel="stylesheet">
 	<link href="img/utareyu.ico" rel="icon">
 	<title>page not found</title>
 </head>
