--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="address=no,telephone=no">
-	<meta name="description" content="utareyu.github.ioのトップページ"
+	<meta name="description" content="utareyu.github.ioのトップページ">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/top.css" rel="stylesheet">
 	<link href="img/utareyu.ico" rel="icon">
