--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 		<section id="contents" class="main">
 			<p>お探しのページは見つからないか削除されているか虚無です。</p>
 			<p>The page you’re looking for can’t be found :/</p>
-			<p><a href="index.html">Home</a></p>
+			<p><a href="https://utareyu.github.io/index.html">Home</a></p>
 		</section>
 	</main>
 	<footer>
