--- a/app/app.html
+++ b/app/app.html
@@ -12,13 +12,11 @@
 
 <body>
 	<header>
-		<div class="container">
 			<h1>Apps</h1>
 			<p>色々な練習で作った物たち</p>
-		</div>
 	</header>
 	<main>
-		<p>JavaScript</p>
+		<h3 id="JavaScript">JavaScript</h3>
 		<ul>
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
 		</ul>
