--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 				<section id="contents">
 					<section>
 						<h3>
-							App
+							Apps
 						</h3>
 						<ul>
 							<li>bf-int-ent</li>
 							<li>kfpedia</li>
 							<li>sky</li>
+							<li><a href="https://utareyu.github.io/app/app.html#JavaScript">JavaScript</a></li>
 						</ul>
 					</section>
 					<section>
@@ -49,6 +50,7 @@
 							<li><a href="https://github.com/utareyu/bf-int-enc">bf-int-ent</a></li>
 							<li><a href="https://github.com/utareyu/kfpedia">kfpedia</a></li>
 							<li><a href="https://github.com/utareyu/sky">sky</a></li>
+							<li><a href="https://github.com/utareyu/JavaScript">JavaScript</a></li>
 						</ul>
 					</section>
 				</section>
@@ -96,6 +98,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="https://utareyu.github.io/JavaScript/index.html">JavaScript</a></li>
+						<li><a href="https://utareyu.github.io/app/app.html">Apps</a></li>
 						<li><a href="404.html">404</a></li>
 					</ul>
 				</section>
