--- a/app/app.html
+++ b/app/app.html
@@ -21,6 +21,9 @@
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
 		</ul>
 	</main>
+	<section class="pagenav">
+		<p><a href="https://utareyu.github.io/index.html">home</a></p>
+	</section>
 	<footer>
 		<p>(c)2021~ utareyu</p>
 	</footer>
