--- a/index.html
+++ b/index.html
@@ -93,11 +93,16 @@
 			<nav>
 				<section class="column">
 					<h3>
+						Learn
+					</h3>
+					<ul>
+						<li><a href="https://utareyu.github.io/JavaScript/index.html">JavaScript</a></li>
+					</ul>
+					<h3>
 						Map
 					</h3>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="https://utareyu.github.io/JavaScript/index.html">JavaScript</a></li>
 						<li><a href="https://utareyu.github.io/app/app.html">Apps</a></li>
 						<li><a href="404.html">404</a></li>
 					</ul>
