--- a/app/app.html
+++ b/app/app.html
@@ -19,6 +19,8 @@
 		<h3 id="JavaScript">JavaScript</h3>
 		<ul>
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
+			<!-- 椅子年齢 -->
+			<!-- BMMatch -->
 		</ul>
 	</main>
 	<section class="pagenav">
