--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/top.css" rel="stylesheet">
 	<link href="img/utareyu.ico" rel="icon">
-	<meta property="og:url" content="https://utareyu.github.io/index.html" />
-	<meta property="og:type" content="website" />
-	<meta property="og:title" content="utareyu home" />
-	<meta property="og:description" content="メインページ" />
-	<meta property="og:site_name" content="utareyu.github.io" />
-	<meta property="og:image" content="https://utareyu.github.io/img/utareyu.ico" />
+	<meta property="og:url" content="https://utareyu.github.io/index.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="utareyu home">
+	<meta property="og:description" content="メインページ">
+	<meta property="og:site_name" content="utareyu.github.io">
+	<meta property="og:image" content="https://utareyu.github.io/img/utareyu.ico">
 	<meta name="twitter:card" content="Summary Card">
 	<meta name="twitter:site" content="@utareyu">
 	<title>utareyu home</title>
