--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<meta property="og:description" content="メインページ">
 	<meta property="og:site_name" content="utareyu.github.io">
 	<meta property="og:image" content="https://utareyu.github.io/img/utareyu.ico">
+	<meta name="twitter:card" content="Summary">
+	<meta name="twitter:site" content="@utareyu">
 	<title>utareyu home</title>
 </head>
 
