--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<meta property="og:url" content="https://utareyu.github.io/index.html">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="utareyu home">
-	<meta property="og:description" content="メインページ">
+	<meta property="og:description" content="utareyu.github.ioのトップページ">
 	<meta property="og:site_name" content="utareyu.github.io">
-	<meta property="og:image" content="https://utareyu.github.io/img/utareyu.ico">
+	<meta property="og:image" content="https://utareyu.github.io/img/utareyu.jpg">
 	<meta name="twitter:card" content="Summary">
 	<meta name="twitter:site" content="@utareyu">
 	<title>utareyu home</title>
