--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="utareyu.github.ioのトップページ">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/top.css" rel="stylesheet">
+	<script src="themeColor.js" defer></script>
 	<link href="img/utareyu.ico" rel="icon">
 	<meta property="og:url" content="https://utareyu.github.io/index.html">
 	<meta property="og:type" content="website">
@@ -34,8 +35,15 @@
 			</div>
 		</div>
 	</header>
+	<div style="display:flex;flex-direction:row-reverse">
+		<div style="width:fit-content;height:1.5em;color:#fff;background-color:#888;padding: 5px 5px 0;">theme :
+			<span onclick="changeLight()" style="cursor:pointer;border:#202124 solid 2px;margin:2px;width:1em;height:1em;background:#fff;">　</span>
+			<span onclick="changeBlue()" style="cursor:pointer;border:aliceblue solid 2px;margin:2px;width:1em;height:1em;background:#0f3057;">　</span>
+			<span onclick="changeBlack()(`k`)" style="cursor:pointer;border:#eee solid 2px;margin:2px;width:1em;height:1em;background:#222;">　</span>
+		</div>
+	</div>
 	<div class="main">
-		<div class="container">
+		<div class="container" style="margin-top: 0;">
 			<main>
 				<section id="contents">
 					<section>
