--- a/app/app.html
+++ b/app/app.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://utareyu.github.io/css/main.css" rel="stylesheet">
+	<script src="themeColor.js" defer></script>
 	<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
 	<title>Apps</title>
 </head>
