--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://utareyu.github.io/css/main.css" rel="stylesheet">
 	<link href="https://utareyu.github.io/css/top.css" rel="stylesheet">
-	<script src="https://utareyu.github.io/themeColor.js" async></script>
+	<script src="https://utareyu.github.io/themeColor.js" defer></script>
 	<link href="img/utareyu.ico" rel="icon">
 	<title>page not found</title>
 </head>
