--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="utareyu.github.ioのトップページ">
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/top.css" rel="stylesheet">
-	<script src="https://utareyu.github.io/themeColor.js" async></script>
+	<script src="https://utareyu.github.io/themeColor.js" defer></script>
 	<link href="img/utareyu.ico" rel="icon">
 	<meta property="og:url" content="https://utareyu.github.io/index.html">
 	<meta property="og:type" content="website">
