--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div style="width:fit-content;height:1.5em;color:#fff;background-color:#888;padding: 5px 5px 0;">theme :
 			<span onclick="changeLight()" style="cursor:pointer;border:#202124 solid 2px;margin:2px;width:1em;height:1em;background:#fff;">　</span>
 			<span onclick="changeBlue()" style="cursor:pointer;border:aliceblue solid 2px;margin:2px;width:1em;height:1em;background:#0f3057;">　</span>
-			<span onclick="changeBlack()(`k`)" style="cursor:pointer;border:#eee solid 2px;margin:2px;width:1em;height:1em;background:#222;">　</span>
+			<span onclick="changeBlack()" style="cursor:pointer;border:#eee solid 2px;margin:2px;width:1em;height:1em;background:#222;">　</span>
 		</div>
 	</div>
 	<div class="main">
