--- a/app/app.html
+++ b/app/app.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://utareyu.github.io/themeColor.js"></script>
 	<link href="https://utareyu.github.io/css/main.css" rel="stylesheet">
-	<script src="https://utareyu.github.io/themeColor.js" defer></script>
 	<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
 	<title>Apps</title>
 </head>
