--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="address=no,telephone=no">
 	<meta name="description" content="utareyu.github.ioのトップページ">
+	<script src="https://utareyu.github.io/themeColor.js"></script>
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/top.css" rel="stylesheet">
-	<script src="https://utareyu.github.io/themeColor.js" defer></script>
 	<link href="img/utareyu.ico" rel="icon">
 	<meta property="og:url" content="https://utareyu.github.io/index.html">
 	<meta property="og:type" content="website">
