--- a/app/app.html
+++ b/app/app.html
@@ -22,6 +22,8 @@
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
 			<!-- 椅子年齢 -->
 			<!-- BMMatch -->
+			<!-- パレート図 -->
+
 		</ul>
 	</main>
 	<section class="pagenav">
