--- a/app/app.html
+++ b/app/app.html
@@ -14,12 +14,13 @@
 <body>
 	<header>
 			<h1>Apps</h1>
-			<p>色々な練習で作った物たち</p>
+			<p>色々</p>
 	</header>
 	<main>
 		<h3 id="JavaScript">JavaScript</h3>
 		<ul>
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
+			<li><a href="https://utareyu.github.io/app/shirokepuJSON/shirokepuJSON.html">発言まとめJSON入力補助ツール</a></li>
 			<!-- 椅子年齢 -->
 			<!-- BMMatch -->
 			<!-- パレート図 -->
