--- a/app/shirokepuJSONtool/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/shirokepuJSONtool.html
@@ -70,7 +70,7 @@
 		</div>
 		<section>
 			<code>コンマと波括弧忘れずに.notice</code>
-			<pre class="prettyprint linenums lang-json">
+			<pre class="prettyprint linenums lang-json" style="margin:1em 0; width: 90%;">
 //...
 	{"no":nnn, "member":[0~3], "date":yymmdd, "tag":[0~3], "data":"XXX",}, //desc(説明)はなくてもよい
 	{"no":nnn, "member":[0~3], "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"},
