--- a/app/shirokepuJSONtool/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/shirokepuJSONtool.html
@@ -72,9 +72,9 @@
 			<code>コンマと波括弧忘れずに.notice</code>
 			<pre class="prettyprint linenums lang-json" style="margin:1em 0; width: 90%;">
 //...
-	{"no":nnn, "member":[0~3], "date":yymmdd, "tag":[0~3], "data":"XXX",}, //desc(説明)はなくてもよい
-	{"no":nnn, "member":[0~3], "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"},
-	{"no":nnn, "member":[0~3], "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"}  //最終行
+	{"no":nnn, "member":0~3, "date":yymmdd, "tag":[0~3], "data":"XXX",}, //desc(説明)はなくてもよい
+	{"no":nnn, "member":0~3, "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"},
+	{"no":nnn, "member":0~3, "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"}  //最終行
 ],
 //...
 </pre>
