--- a/app/shirokepuJSONtool/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/shirokepuJSONtool.html
@@ -33,7 +33,7 @@
 			<h2>入力欄</h2>
 			<div>
 				番号: 
-				<div class="sp">各々最終行の値から+1(テスト中)</div>
+				<div class="sp">各々最終行の値から+1</div>
 				発言者: 
 				<div class="sp">
 					<input type="radio" name="member" required="required" value="0"> うた<br>
