--- a/pcSelectionForDAW.html
+++ b/pcSelectionForDAW.html
@@ -61,7 +61,7 @@
 			</p>
 			<p class="note">
 				最小要件ではあるがふつうのPCと比べるとだいぶいいスペック メモリやストレージの交換はできない<br>
-				mac自体がクリエイター向けなだけあってオーディオ<sup><a id="r2" href="#n2">[2]</a></sup>や画面にこだわっているのを感じられる（知人談）<br>
+				Mac自体がクリエイター向けなだけあってオーディオ<sup><a id="r2" href="#n2">[2]</a></sup>や画面にこだわっているのを感じられる（知人談）<br>
 				納期が最短翌日は強い
 			</p>
 		</section>
