--- a/app/shirokepuJSONtool/t/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/t/shirokepuJSONtool.html
@@ -56,11 +56,18 @@
 				<div class="sp">
 					<input id="data" type="text" style="font-family: sans-serif;" required="required"><br>
 				</div>
-				説明: (改行は半角スペースに置き換え)
+				説明:
 				<div class="sp">
 					<textarea id="desc" rows="5" cols="40" style="font-size: 80%;font-family: sans-serif;"></textarea><br>
 				</div>
-				<input id="convbtn" type="button" value="変換"  onclick="runConv(date.value, data.value, desc.value)"><br>
+				画像: 
+				<div class="sp">
+					<input id="img" type="file" accept='image/*' onchange="previewImage(this);">
+					<p>
+						<img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+					</p>
+				</div>
+				<input id="convbtn" type="button" value="変換"  onclick="runConv(date.value, data.value, desc.value, img.accept)"><br>
 				<h2>結果</h2>
 				<div class="sp">
 					<textarea id="result" rows="5" cols="40"></textarea><br>
